--- a/abstract.tex
+++ b/abstract.tex
@@ -43,7 +43,7 @@ Given any regulated function $a: [0,\infty) \to \mathbb{C}$, define operators $T
 
 %For any bounded, regulated function $a: [0,\infty) \to \mathbb{C}$, consider the family of operators $\{ T_R \}$ on the sphere $S^d$ such that $T_R f = a(k/R) f$ for any spherical harmonic $f$ of degree $k$. This thesis discusses the work of the author on characterizing the functions $a$ for which the operators $\{ T_R \}$ are uniformly bounded on $L^p(S^d)$ in the range $1/(d-1) < |1/p - 1/2| < 1/2$. More generally, we obtain analogous results for spectral multiplier operators of eigenfunction expansions of a first order elliptic pseudo-differential operator $P$ on a compact manifold $X$. Under curvature assumptions on the principal symbol of the operator $P$, and assuming the eigenvalues of $P$ are contained in an arithmetic progression, we characterize all regulated and compactly supported functions $a$ whose associated spectral multiplier operators $\{ a(P/R) \}$ are uniformly bounded on $L^p(X)$, under curvature assumptions on the principal symbol of $P$, and assuming the eigenvalues of $P$ are contained in an arithmetic progression. If in addition, we assume that solutions to the wave equation $\partial_t^2 u = P^2 u$ have finite propagation speed, and that certain estimates for the wave equation hold, then we characterize all regulated functions whose associated operators $\{ T_R \}$ are uniformly bounded on $L^p(X)$, without the assumption of compact support.
 
-More generally we obtain analogous results for spectral multiplier operators on a compact manifold $X$ associated with eigenfunction expansions of a self-adjoint, first order, elliptic pseudo-differential operator $P$, under restrictive assumptions related to the periodicity and curvature properties of a Hamiltonian flow on $T^* X$ associated with $P$.
+Our methods do not take advantage of the rotational symmetries of $S^d$, and can thus be applied in greater generality. In particular, we obtain results for a restricted family of spectral multipliers of a more general self-adjoint elliptic pseudo-differential operator $P$, under  assumptions related to the periodicity and curvature properties of a Hamiltonian flow on $T^* X$ associated with $P$.
 
 In order to prove these results, we obtain new quasi-orthogonality estimates for averages of solutions to the half-wave equation $\partial_t - i P = 0$, via a connection between pseudo-differential operators satisfying an appropriate curvature condition and Finsler geometry, and combine estimates for different frequency scales via arguments based on a theory of atomic decompositions in $L^p$ for $p > 1$.
 
