--- a/main.tex
+++ b/main.tex
@@ -145,6 +145,9 @@
 \chapter{Combining Scales Via Atomic Decompositions} \label{chap:spectralatomicdchapter}
 \input{chapters/3-atomicdecompositions}
 
+\part{Appendices}
+\input{chapters/A-appendix}
+
 %\chapter{Future Work}
 %\input{chapters/4-futurework}
 
