--- a/references.bib
+++ b/references.bib
@@ -9,13 +9,121 @@
 %    \emph{Oscillatory Integrals and Spherical Harmonics},
 %    1985.
 
+@article {SoggeSphericalHarmonics,
+    AUTHOR = {Sogge, Christopher D.},
+     TITLE = {Oscillatory integrals and spherical harmonics},
+   JOURNAL = {Duke Math. J.},
+  FJOURNAL = {Duke Mathematical Journal},
+    VOLUME = {53},
+      YEAR = {1986},
+    NUMBER = {1},
+     PAGES = {43--65}
+}
+
+@book {SoggeHangzhou,
+    author = {Sogge, Christopher D.},
+    title = {{H}angzhou Lectures on Eigenfunctions of the {L}aplacian},
+    series = {Annals of Mathematics Studies},
+    volume = {188},
+    publisher = {{P}rinceton University Press, {P}rinceton, NJ},
+    year = {2014}
+}
+
+@book {TaoDispersive,
+    author = {Tao, Terence},
+    title = {Nonlinear Dispersive Equations},
+    series = {CBMS Regional Conference Series in Mathematics},
+    volume = {106},
+    year = {2006},
+    publisher = {Conference Board of the Mathematical Sciences, {W}ashington, DC; by the {A}merican Mathematical Society, {P}rovidence, RI}
+}
+
+@article {BonamiClerc,
+    AUTHOR = {Bonami, Aline and Clerc, Jean-Louis},
+     TITLE = {Sommes de {C}es\`aro et multiplicateurs des d\'eveloppements
+              en harmoniques sph\'eriques},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {183},
+      YEAR = {1973},
+     PAGES = {223--263}
+}
+
+@incollection{HormanderRiesz,
+    AUTHOR = {H\"ormander, Lars},
+     TITLE = {On the {R}iesz means of spectral functions and eigenfunction
+              expansions for elliptic differential operators},
+ BOOKTITLE = {Some Recent Advances in the Basic Sciences, Vol. 2
+              (Proc. Annual Sci. Conf., {B}elfer Grad. School
+              Sci., {Y}eshiva Univ., {N}ew {Y}ork, 1965-1966)},
+     PAGES = {155--202},
+ PUBLISHER = {{Y}eshiva University, {B}elfer Graduate School of Science, New
+              York},
+      YEAR = {1969}
+}
+
+@article {SoggeSpectralClusters,
+    AUTHOR = {Sogge, Christopher D.},
+     TITLE = {Concerning the {$L^p$} norm of spectral clusters for
+              second-order elliptic operators on compact manifolds},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {77},
+      YEAR = {1988},
+    NUMBER = {1},
+     PAGES = {123--138}
+}
+
+@article{SoggeRieszMeans,
+    author = {Sogge, Christopher D.},
+    title = {On the Convergence of {R}iesz Means on Compact Manifolds},
+    journal = {Ann. of Math. (2)},
+    volume = {126},
+    number = {3},
+    year = {1987},
+    pages = {439-447}
+}
+
+@article {ChristandSogge,
+    AUTHOR = {Christ, F. M. and Sogge, C. D.},
+     TITLE = {The weak type {$L^1$} convergence of eigenfunction expansions
+              for pseudodifferential operators},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {94},
+      YEAR = {1988},
+    NUMBER = {2},
+     PAGES = {421--453}
+}
+
+@article {SeegerSoggeBochnerRiesz,
+    AUTHOR = {Seeger, A. and Sogge, C. D.},
+     TITLE = {Bounds for eigenfunctions of differential operators},
+   JOURNAL = {Indiana Univ. Math. J.},
+  FJOURNAL = {Indiana University Mathematics Journal},
+    VOLUME = {38},
+      YEAR = {1989},
+    NUMBER = {3},
+     PAGES = {669--682}
+}
+
 @book{Arnold,
-    author = {Arnold, Vladimir},
-    title = {Mathematical Methods in Classical Mechanics},
-    year = {1974},
-    publisher = {Springer-Verlag},
+    author = {Arnol'd, Vladimir I.},
+    title = {Mathematical Methods of Classical Mechanics},
+    year = {1989},
+    publisher = {Springer-Verlag, New York},
     volume = {60},
+    edition = {Second},
+    note = {Translated from the Russian by K. Vogtmann and A. Weinstein},
     series = {Graduate Texts in Mathematics}
+}
+
+@book{Folland,
+    author = {Folland, Gerald},
+    title = {A Course in Abstract Harmonic Analysis},
+    year = {1995},
+    publisher = {CRC Press, Boca Raton, FL},
+    series = {Studies in Advanced Mathematics}
 }
 
 @article{Matsumoto,
@@ -30,25 +138,30 @@
 @book{Treves2,
     author = {Treves, François},
     year = {1980},
-    title = {Introduction to Pseudodifferential and {F}ourier Integral Operators},
+    title = {Introduction to Pseudodifferential and {F}ourier Integral Operators. {V}ol. 2},
     volume = {2},
-    publisher = {Plenum Press}
+    publisher = {Plenum Press, New York - London},
+    series = {University Series in Mathematics}
 }
 
 @book{Besse,
     author = {Besse, Arthur L.},
     title = {Manifolds All of Whose Geodesics Are Closed},
     year = {1978},
-    publisher = {Springer Berlin, Heidelberg},
+    publisher = {Springer-Verlag, Berlin - New York},
     volume = {93},
-    series = {A Series of Modern Surveys in Mathematics}
+    series = {Ergebnisse der Mathematik und ihrer Grenzgebiete},
+    note = {With appendices by D. B. A. Epstein, J.-P. Bourguignon, L.
+              B\'erard-Bergery, M. Berger and J. L. Kazdan}
 }
 
 @book{SteinWeiss,
-    author = {Stein, Elias and Weiss, Guido},
+    author = {Stein, Elias M. and Weiss, Guido},
     year = {1971},
     title = {Introduction to {F}ourier Analysis on {E}uclidean Spaces},
-    publisher = {Princeton University Press}
+    publisher = {Princeton University Press, Princeton, NJ},
+    series = {Princeton Mathematical Series},
+    volume = {32}
 }
 
 @article{Hormander1,
@@ -73,8 +186,8 @@
 @book{HeinzHopf,
     author = {Hopf, Heinz},
     title = {Differential Geometry In The Large},
-    year = {1989},
-    publisher = {Springer-Verlag},
+    year = {1983},
+    publisher = {Springer-Verlag, Berlin},
     volume = {1000},
     series = {Lectures Notes in Mathematics}
 }
@@ -83,7 +196,7 @@
     author = {Bao, D. and Chern S.-S. and Shen Z.},
     title = {An Introduction to {R}iemann-{F}insler Geometry},
     year = {2000},
-    publisher = {Springer-Verlag},
+    publisher = {Springer-Verlag, New York},
     volume = {200},
     series = {Graduate Texts in Mathematics}
 }
@@ -203,7 +316,7 @@
     number = {2},
     year = {2000},
     pages = {221-237}
-} (ArXiv 1999)
+}
 
 @article{Tao,
     author = {Tao, Terence},
@@ -223,7 +336,7 @@
     number = {1},
     year = {2008},
     pages = {31-68}
-} (ArXiv 2007)
+}
 
 @article{HeoandNazarovandSeeger,
     author = {Heo, Yaryong and Nazarov, Fedor and Seeger, Andreas},
@@ -233,7 +346,7 @@
     number = {1},
     year = {2011},
     pages = {55-92}
-} (ArXiv 2009)
+}
 
 @article{HeoandNazarovandSeeger2,
     author = {Heo, Yaryong and Nazarov, Fedor and Seeger, Andreas},
@@ -253,13 +366,33 @@
     number = {6},
     year = {2011},
     pages = {1239-1295}
-} (ArXiv 2010)
+}
+
+@book{Hormander3,
+    author = {H\"{o}rmander, Lars},
+    title = {The Analysis of Linear Partial Differential Operators. {III}: Pseudo-Differential Operators},
+    year = {1985},
+    publisher = {Springer-Verlag, Berlin},
+    series = {Grundlehren der mathematischen Wissenschaften},
+    volume = {274}
+}
+
+@book{Taylor,
+    author = {Taylor, Michael E.},
+    title = {Partial Differential Equations},
+    year = {1996},
+    publisher = {Springer-Verlag, New York},
+    series = {Texts in Applied Mathematics},
+    volume = {23} 
+}
 
 @book{Hormander4,
     author = {H\"{o}rmander, Lars},
-    title = {The Analysis of Linear Partial Differential Operators {IV}: {F}ourier Integral Operators},
+    title = {The Analysis of Linear Partial Differential Operators. {IV}: {F}ourier Integral Operators},
     year = {1985},
-    publisher = {Springer Verlag}
+    publisher = {Springer-Verlag, Berlin},
+    series = {Grundlehren der mathematischen Wissenschaften},
+    volume = {275}
 }
 
 @article{HeoandYang,
@@ -280,7 +413,7 @@
     number = {4},
     year = {2012},
     pages = {1281-1295}
-} (ArXiv 2011)
+}
 
 @article{LeeSeeger,
     author = {Lee, Sanghyuk and Seeger, Andreas},
@@ -326,7 +459,7 @@
     volume = {196},
     year = {2017},
     pages = {773-789}
-} (ArXiv 2015)
+}
 
 @article{Cladek,
     author = {Cladek, Laura},
@@ -336,7 +469,7 @@
     number = {2},
     year = {2018},
     pages = {467-498}
-} (arXiv 2016)
+}
 
 @article{KimSpectral,
     author = {Kim, Jongchon},
@@ -346,7 +479,7 @@
     number = {2},
     year = {2018},
     pages = {937-969}
-} (ArXiv 2016)
+}
 
 @article{KatzandRogers,
     author = {Katz, Nets Hawk and Rogers, Keith M.},
@@ -356,7 +489,7 @@
     number = {6},
     year = {2018},
     pages = {1706-1716}
-} (ArXiV 2018)
+}
 
 @InProceedings{BeltranandHickmanandSogge,
     author = {Beltran, David and Hickman, Jonathan and Sogge, Christopher D.},
@@ -364,7 +497,7 @@
     booktitle="Geometric Aspects of Harmonic Analysis",
     year = {2021},
     pages = {29-105}
-} (ArXiv 2019)
+}
 
 @article{GuthandWangandZhang,
     author = {Guth, Larry and Wang, Hong and Zhang, Ruixiang},
@@ -374,7 +507,7 @@
     number = {2},
     year = {2020},
     pages = {551-581}
-} (ArXiv 2019)
+}
 
 @unpublished{Denson,
     author = {Denson, Jacob},
@@ -420,7 +553,7 @@
     number = {2},
     year = {2021},
     pages = {1-21}
-}  (ArXiv 2021)
+}
 
 
 
@@ -436,19 +569,48 @@
     author = {Wolff, Thomas H.},
     year = {2003},
     title = {Lectures in Harmonic Analysis},
-    publisher = {The American Mathematical Society}
+    publisher = {American Mathematical Society, Providence, RI},
+    series = {University Lecture Series},
+    volume = {29},
+    editor = {\L aba, I. and Shubin, C.},
+    note = {with a foreword by Fefferman, C. and a preface by
+              \L aba, I.}
 }
 
 @book{Grafakos,
     author = {Grafakos, Loukas},
-    year = {2014},
+    year = {2008},
     title = {Classical {F}ourier Analysis},
-    publisher = {Springer}
+    publisher = {Springer, New York},
+    series = {Graduate Texts in Mathematics},
+    edition = {Second},
+    volume = {249}
+}
+
+@book{Sepanski,
+    author = {Sepanski, Mark R.},
+    year = {2007},
+    title = {Compact {L}ie Groups},
+    publisher = {Springer, New York},
+    series = {Graduate Texts in Mathematics},
+    volume = {235}
+}
+
+@book{GrafakosModern,
+    author = {Grafakos, Loukas},
+    year = {2009},
+    title = {Modern {F}ourier Analysis},
+    publisher = {Springer, New York},
+    series = {Graduate Texts in Mathematics},
+    volume = {250}
 }
 
 @book{Sogge,
     author = {Sogge, Christopher D.},
     year = {2017},
-    title = {Fourier Integrals in Classical Analysis},
-    publisher = {Cambridge University Press}
+    title = {{F}ourier Integrals in Classical Analysis},
+    publisher = {Cambridge University Press, Cambridge},
+    series = {Cambridge Tracts in Mathematics},
+    edition = {Second},
+    volume = {210}
 }
