--- a/main.tex
+++ b/main.tex
@@ -78,6 +78,8 @@
 \DeclareMathOperator{\EC}{\mathcal{E}}
 \DeclareMathOperator{\AC}{\mathcal{A}}
 
+\newcommand\COP[1]{{\text{COP}^{+}_{{#1}}}}
+
 \DeclareMathOperator{\EE}{\mathbb{E}}
 \DeclareMathOperator{\NN}{\mathbb{N}}
 
