--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,24 @@
     publisher = {Conference Board of the Mathematical Sciences, {W}ashington, DC; by the {A}merican Mathematical Society, {P}rovidence, RI}
 }
 
+@book{spivakvol4,
+    AUTHOR = {Spivak, Michael},
+     TITLE = {A comprehensive introduction to differential geometry. {V}ol. {IV}},
+    edition = {Second},
+ PUBLISHER = {Publish or Perish, Inc., Wilmington, DE},
+      YEAR = {1979}
+}
+
+@article{PeetreDiff,
+    AUTHOR = {Peetre, Jaak},
+     TITLE = {Une caract\'erisation abstraite des op\'erateurs
+              diff\'erentiels},
+   JOURNAL = {Math. Scand.},
+    VOLUME = {7},
+      YEAR = {1959},
+     PAGES = {211--218}
+}
+
 @article {BonamiClerc,
     AUTHOR = {Bonami, Aline and Clerc, Jean-Louis},
      TITLE = {Sommes de {C}es\`aro et multiplicateurs des d\'eveloppements
@@ -135,11 +153,18 @@
     pages = {17-25}
 }
 
+@book{RudinFunc,
+    AUTHOR = {Rudin, Walter},
+     TITLE = {Functional analysis},
+    SERIES = {McGraw-Hill Series in Higher Mathematics},
+ PUBLISHER = {McGraw-Hill Book Co., New York-D\"usseldorf-Johannesburg},
+      YEAR = {1973}
+}
+
 @book{Treves2,
     author = {Treves, François},
     year = {1980},
     title = {Introduction to Pseudodifferential and {F}ourier Integral Operators. {V}ol. 2},
-    volume = {2},
     publisher = {Plenum Press, New York - London},
     series = {University Series in Mathematics}
 }
