--- a/main.tex
+++ b/main.tex
@@ -79,6 +79,7 @@
 \DeclareMathOperator{\AC}{\mathcal{A}}
 
 \newcommand\COP[1]{{\text{COP}^{+}_{{#1}}}}
+\newcommand\Sd[1]{{S}^{\!{#1}}}
 
 \DeclareMathOperator{\EE}{\mathbb{E}}
 \DeclareMathOperator{\NN}{\mathbb{N}}
