--- a/references.bib
+++ b/references.bib
@@ -189,6 +189,15 @@
     volume = {32}
 }
 
+@book{BigStein,
+    author = {Stein, Elias M.},
+    year = {1993},
+    title = {Harmonic analysis: real-variable methods, orthogonality, and oscillatory integrals},
+    publisher = {Princeton University Press, Princeton, NJ},
+    series = {Princeton Mathematical Series},
+    volume = {43}
+}
+
 @article{Hormander1,
     author = {H\"{o}rmander, Lars},
     title = {Estimates For Translation Invariant Operators In {$L^p$} Spaces},
