--- a/main.tex
+++ b/main.tex
@@ -149,6 +149,7 @@
 \input{chapters/3-atomicdecompositions}
 
 \part{Appendices}
+\renewcommand\chaptername{Appendix}
 \input{chapters/A-appendix}
 
 %\chapter{Future Work}
