--- a/references.bib
+++ b/references.bib
@@ -429,6 +429,15 @@
     volume = {275}
 }
 
+@book{HormanderVol1,
+    author = {H\"{o}rmander, Lars},
+    title = {The Analysis of Linear Partial Differential Operators. {I}: Distribution Theory and {F}ourier Analysis},
+    year = {1990},
+    publisher = {Springer-Verlag, Berlin},
+    series = {Grundlehren der mathematischen Wissenschaften},
+    volume = {256}
+}
+
 @article{HeoandYang,
     author = {Heo, Yaryong and Yang, Chan Woo},
     title = {Local Smoothing Estimates for some Half-Wave Operators},
@@ -447,6 +456,17 @@
     number = {4},
     year = {2012},
     pages = {1281-1295}
+}
+
+@article{DuistermaatMorse,
+    AUTHOR = {Duistermaat, Johannes J.},
+     TITLE = {On the {M}orse index in variational calculus},
+   JOURNAL = {Advances in Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {21},
+      YEAR = {1976},
+    NUMBER = {2},
+     PAGES = {173--195}
 }
 
 @article{LeeSeeger,
