--- a/titlepage.tex
+++ b/titlepage.tex
@@ -3,7 +3,7 @@
         \vspace*{1cm}
         
         \Huge
-        \textbf{Multipliers of Elliptic Operators on Compact Manifolds}
+        \textbf{Multipliers of Spherical Harmonic Expansions}
         
         \vspace{0.5cm}
         \LARGE
