--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,42 +1,44 @@
+%!TEX root = main.tex
+
 \begin{titlepage}
     \begin{center}
         \vspace*{1cm}
         
         \Huge
         \textbf{Multipliers of Spherical Harmonic Expansions}
-        
-        \vspace{0.5cm}
-        \LARGE
-        {Necessary and Sufficient Conditions For Boundedness}%Multipliers of Spherical Harmonic Expansions}
-        \vspace{1em}
-        \\
-        by\\
-        \vspace{1em}
     
+%        \LARGE
+%        {Necessary and Sufficient Conditions For Boundedness}%Multipliers of Spherical Harmonic Expansions}
+        \vspace{1em}
+%        \\
+        by\\
+        \vspace{0.3em}
         \textbf{Jacob Denson}
         
-        \vfill
+        \vspace{1.8cm}
         
-        A dissertation submitted in partial fulfillment\\
-        of the requirements for the degree of\\
+        A dissertation submitted in partial\\
+        fulfillment of the requirements for the\\
+        degree of\\
+
+        \vspace{1cm}
         Doctor of Philosophy\\
         (Mathematics)\\
     
-        
         \vspace{1.8cm}
 
-        
         \Large
         at the\\University of Wisconsin-Madison\\
         2025\\
         \vspace{1.0cm}
-        %\begin{flushleft}
-        %\large
-        %Date of Final Oral Exam: TODO\\
-        %The dissertation is approved by the following members of the Final Oral Committee: \\
-        %\setlength{\parindent}{10ex}
-        %Im A FacultyMember, Professor, Mathematics\\Im A FacultyMember, Associate Professor, Mathematics\\ Im A FacultyMember, Assistant Professor, Statistics\\ Im A FacultyMember, Professor, Computer Science\\
-        %\end{flushleft}
+        \begin{flushleft}
+        \large
+        Date of Final Oral Exam: July 24th, 2025\\
+        The dissertation is approved by the following members of the Final Oral Committee: \\
+        \setlength{\parindent}{10ex}
+        Sean Paul, Professor, Mathematics\\Andreas Seeger, Professor, Mathematics\\
+        Brian Street, Professor, Mathematics\\Betsy Stovall, Professor, Mathematics\\
+        \end{flushleft}
         
     \end{center}
     
